<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ntnu.idatt2506.assignment_03.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friends"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_friend"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/name_of_friend"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/birthday_of_friend"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/birthday_format"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/add_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:onClick="onAddFriendClicked"
        />

    <Button
        android:id="@+id/show_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_friends"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:onClick="onShowFriendsClicked"
        />

</LinearLayout>